--- a/test/index.html
+++ b/test/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>事件触发器类 EventEmitter</title>
+  <title>定时器类 EventEmitter</title>
   <style>
     body, pre{
       font: 1em/1.5em "Microsoft YaHei", "FangSong", "STXihei", "STHeiti";
@@ -60,28 +60,32 @@
 <body>
 <h2>Quick start</h2>
 <pre>
-// 创建一个事件对象
-var eventEmitter = new EventEmitter();
+// 创建一个定时器对象
+var timer = new Timer();
 
-// 注册事件侦听器：
-eventEmitter.on('do', function(e, arg1){ console.log('do', arg1.text) })
+// 执行一个延时任务：
+timer.setTimeout('do', function(){ console.log('do setTimeout') }, 2 * 1000)
 
-// 触发事件：
-eventEmitter.emit('do', {text: 'ok'})
+// 执行一个定时任务：
+timer.setInterval('do', function(){ console.log('do setInterval') }, 2 * 1000)
 
-// 删除事件侦听器:
-eventEmitter.off('do');
+// 清除延时任务:
+timer.clearTimeout('do');
+
+// 清除定时任务:
+timer.clearInterval('do');
+
 
 </pre>
 
-<h2>EventEmitter原型方法和属性</h2>
+<h2>Timer原型方法和属性</h2>
 <script>
-  document.writeForinConstructor(EventEmitter, !0)
+  document.writeForinConstructor(Timer, !0)
 </script>
 
-<h2>EventEmitter静态方法和属性</h2>
+<h2>Timer静态方法和属性</h2>
 <script>
-  document.writeForinConstructor(EventEmitter)
+  document.writeForinConstructor(Timer)
 </script>
 </body>
 </html>
